# juanka_emika

./: .gitmodules  CMakeLists.txt  README.md
src/: mainwindow.h  mainwindow.ui
